<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_creator"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_CountDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_CountDots"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/countDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_xmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_xmin"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/xMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_xmax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_xmax"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/xMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Save"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Save_Click"
            android:text="@string/btn_Save" />

        <Button
            android:id="@+id/btn_Back"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Back_Click"
            android:text="@string/btn_Back" />
    </LinearLayout>

</LinearLayout>